--- a/lab1/report/lab1.tex
+++ b/lab1/report/lab1.tex
@@ -26,67 +26,123 @@ $n < 2^{25}$
 \se{Описание программы}
 Единственный файл \lstinline|main.cu|.
 
-Реализованное ядро называется \lstinline|inverse|.
+Реализованное ядро называется \lstinline|inverse|. Содержит единственный цикл с тривиальным условием.
+
+\listsource{..}{main.cu}
+\listsource{..}{main.c}
+
+\newpage
 
 \se{Результаты}
 
 \begin{table*}[!htb]
-	\begin{subtable}{.32\linewidth}
-		\caption{1000 элементов}
+	\begin{subtable}{.333\linewidth}
+		\caption{$10^3$ элементов}
 		\centering
 
 		\lstinline|cpu time = 0.007000|
 
 		\begin{tabular}{|c|c|c|}
+			\hline
+			blocks & threads & time       \\
+			\hline
 
+			128    & 128     & 000.036640 \\
+			128    & 32      & 000.037088 \\
+			32     & 128     & 000.039008 \\
+			32     & 32      & 000.041248 \\
+			32     & 1024    & 000.041920 \\
+			1024   & 128     & 000.043584 \\
+			1      & 32      & 000.046112 \\
+			128    & 1024    & 000.047040 \\
+			128    & 1       & 000.047520 \\
+			1024   & 1       & 000.050208 \\
+			32     & 1       & 000.054240 \\
+			1024   & 32      & 000.057536 \\
+			1      & 1024    & 000.066880 \\
+			1      & 128     & 000.076160 \\
+			1      & 1       & 000.149152 \\
+			1024   & 1024    & 000.163264 \\
 			\hline
 		\end{tabular}
 	\end{subtable}
 	\begin{subtable}{.333\linewidth}
-		\caption{100000 элементов}
+		\caption{$10^5$ элементов}
 		\centering
 
-		\lstinline|cpu time = 0.309000|
+		\lstinline|cpu time = 0.200000|
 
 		\begin{tabular}{|c|c|c|}
+			\hline
+			blocks & threads & time       \\
+			\hline
 
+			128    & 128     & 000.037600 \\
+			32     & 1024    & 000.040832 \\
+			32     & 128     & 000.042400 \\
+			1024   & 128     & 000.046528 \\
+			128    & 1024    & 000.055168 \\
+			1      & 1024    & 000.067008 \\
+			128    & 32      & 000.091232 \\
+			1024   & 32      & 000.093760 \\
+			32     & 32      & 000.117824 \\
+			1024   & 1024    & 000.170272 \\
+			1      & 128     & 000.444320 \\
+			1      & 32      & 001.752160 \\
+			1024   & 1       & 001.756608 \\
+			128    & 1       & 001.949856 \\
+			32     & 1       & 003.432608 \\
+			1      & 1       & 011.677664 \\
 			\hline
 		\end{tabular}
 	\end{subtable}
-	\begin{subtable}{.32\linewidth}
-		\caption{1000000 элементов}
+	\begin{subtable}{.333\linewidth}
+		\caption{$10^6$ элементов}
 		\centering
 
 		\lstinline|cpu time = 1.997000|
 
 		\begin{tabular}{|c|c|c|}
+			\hline
+			blocks & threads & time       \\
+			\hline
 
+			1024   & 128     & 000.273600 \\
+			32     & 1024    & 000.277280 \\
+			128    & 1024    & 000.290944 \\
+			128    & 128     & 000.293120 \\
+			32     & 128     & 000.345056 \\
+			1024   & 1024    & 000.441344 \\
+			1      & 1024    & 000.578688 \\
+			1024   & 32      & 000.763008 \\
+			128    & 32      & 000.833280 \\
+			32     & 32      & 001.102944 \\
+			1      & 128     & 004.359520 \\
+			1      & 32      & 017.438175 \\
+			1024   & 1       & 017.528929 \\
+			128    & 1       & 025.771551 \\
+			32     & 1       & 034.263199 \\
+			1      & 1       & 116.714722 \\
 			\hline
 		\end{tabular}
 	\end{subtable}
 
 \end{table*}
 
-\begin{enumerate}
-	\item Отразить в виде таблички или графиков замеры времени работы ядер с
-	      различными конфигурациями (начиная с <<< 1, 32 >>> и как минимум до
-	      <<< 1024, 1024 >>>) и различными входными данными (небольшие тесты,
-	      средние и предельные).
-
-	\item Произвести сравнение с CPU (для этого нужно реализовать свой вариант ЛР без
-	      использования технологии CUDA). Время на копирование входных-выходных
-	      данных не учитывать, замерять только время работы самого алгоритма.
-
-	\item Если программа подразумевает работу с изображениями, то необходимо
-	      наличие скриншотов.
-\end{enumerate}
-
-
 \se{Выводы}
 
-Описать область применения реализованного алгоритма. Указать типовые задачи,
-решаемые им. Оценить сложность программирования, кратко описать возникшие
-проблемы при решении задачи. Провести сравнение и объяснение полученных
-результатов.
+Всю жизнь я делал реверс вектора в один поток и мне даже не приходила в голову идея
+этот алгоритм распараллелить. Как оказалось, это имееет смысл для GPU.
+
+Иногда нужно производить быстрый реверс вектора, например для подготовки данных для
+обучения нейросети.
+
+Судя по результатам тестов не всегда имееет смысл отдавать все доступные ресурсы на
+выполнение операции. В тесте с небольшим количеством элементов ($10^3$)
+вариант с \lstinline|<<<1024,1024>>>| показал худший результат из всех. Больше времени ушло на создание потоков,
+чем на выполнение кода.
+
+В итоге, GPU оказалась быстрее чем CPU примерно в 7 раз (на самом большом тесте).
+Из этого можно сделать вывод, что использование GPU не целесообразно для мизерного набора данных.
 
 \end{document}
