Init report lab2

--- a/lab2/report/lab2.tex
+++ b/lab2/report/lab2.tex
@@ -1,5 +1,7 @@
 \documentclass[12pt]{article}
 
+\usepackage{amsmath}
+
 \input{../../tex/preamble.tex}
 
 \begin{document}
@@ -10,25 +12,46 @@
 Научиться использовать GPU для обработки изображений.
 Использование текстурной памяти.
 
-\textbf{Вариант 6.} Выделение контуров. Метод Превитта.
+\textbf{Вариант 6.} Выделение контуров. Метод Превитта(Прюитта).
 
-В качестве вещественного типа данных необходимо использовать тип данных
-double. Все результаты выводить с относительной точностью $10^{-10}$ . Ограничение:
-$n < 2^{25}$
+\textbf{Входные данные.} На первой строке задается путь к исходному изображению,
+на второй, путь к конечному изображению. $w*h <= 10$
 
 \nvidia
 
 \se{Метод решения}
-Создать результирующий вектор по размеру входного, пробежаться по исходному вектору
-и записать значения в результирующий с индексом $n-1$.
+
+Метод Превитта основан на обработке всех пикселей изображения двумя ядрами 3x3,
+которые сворачивают изображение, вычисляя приблизительные производные:
+одну по горизонтали, другую по вертикали.
+
+\[
+	G_x = \begin{bmatrix}
+		-1 & -1 & -1 \\
+		0  & 0  & 0  \\
+		1  & 1  & 1
+	\end{bmatrix},
+	G_y = \begin{bmatrix}
+		-1 & 0 & 1 \\
+		-1 & 0 & 1 \\
+		-1 & 0 & 1
+	\end{bmatrix}
+\]
+
+Чтобы получить значение градиента в точке достаточно взять среднеквадратичное значение градиентов по $x$ и $y$.
+
+\[
+	G=\sqrt{G_x^2+G_y^2}
+\]
 
 \se{Описание программы}
 Единственный файл \lstinline|main.cu|.
 
-Реализованное ядро называется \lstinline|inverse|. Содержит единственный цикл с тривиальным условием.
+По условиям лабораторной используется текстурная ссылка для хранения пикселей.
+Единственное ядро использует двумерную сетку потоков и обрабатывает отдельные пиксели.
+Значение градиента записывается в результирующий массив типа \lstinline|uchar4|.
 
-% \listsource{..}{main.cu}
-% \listsource{..}{main.c}
+\listsource{../src}{main.cu}
 
 \newpage
 
