--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -135,6 +135,20 @@
 
 \newcommand{\nvidia}[0]{
 	\se{Программное и аппаратное обеспечение}
-	
-	TODO
+
+	Редактор: NVIM v0.4.4
+
+	GPU:
+
+	\begin{tabular}{ll}
+		Driver Version  & : 460.39          \\
+		CUDA Version    & : 11.2            \\
+		Product Name    & : GeForce GT 740M \\
+		VBIOS Version   & : 80.28.22.00.23  \\
+		Total Memory    & : 2004 MiB        \\
+		Graphics Clocks & : 980 MHz         \\
+		Memory Clocks   & : 920 MHz         \\
+	\end{tabular}
+
+
 }
