Send report lab2

--- a/lab2/report/lab2.tex
+++ b/lab2/report/lab2.tex
@@ -15,7 +15,7 @@
 \textbf{Вариант 6.} Выделение контуров. Метод Превитта(Прюитта).
 
 \textbf{Входные данные.} На первой строке задается путь к исходному изображению,
-на второй, путь к конечному изображению. $w*h <= 10$
+на второй, путь к конечному изображению. $w*h <= 10^8$
 
 \nvidia
 
@@ -51,120 +51,63 @@
 Единственное ядро использует двумерную сетку потоков и обрабатывает отдельные пиксели.
 Значение градиента записывается в результирующий массив типа \lstinline|uchar4|.
 
+{
+\scriptsize
 \listsource{../src}{main.cu}
+}
 
 \newpage
 
 \se{Результаты}
 
-\begin{table*}[!htb]
-	\begin{subtable}{.333\linewidth}
-		\caption{$10^3$ элементов}
+\textit{Время указано в миллисекундах}
+
+Размеры изображения: 1634x2224
+
+\begin{figure}[!ht]
+	\begin{subfigure}{0.45\textwidth}
+		\caption*{Исходное изображение}
+		\includegraphics[scale=0.4]{../test/images/gopher.png}
+	\end{subfigure}
+	\begin{subfigure}{0.45\textwidth}
+		\caption*{Результат:}
+		\includegraphics[scale=0.1]{../test/t5/res.png}
+	\end{subfigure}
+\end{figure}
+
+
+\begin{center}
+	cpu time = 348.877649
+	\begin{table*}[!htb]
 		\centering
-
-		\lstinline|cpu time = 0.007000|
-
 		\begin{tabular}{|c|c|c|}
 			\hline
-			blocks & threads & time       \\
+			blocks    & threads & time        \\
 			\hline
-
-			128    & 128     & 000.036640 \\
-			128    & 32      & 000.037088 \\
-			32     & 128     & 000.039008 \\
-			32     & 32      & 000.041248 \\
-			32     & 1024    & 000.041920 \\
-			1024   & 128     & 000.043584 \\
-			1      & 32      & 000.046112 \\
-			128    & 1024    & 000.047040 \\
-			128    & 1       & 000.047520 \\
-			1024   & 1       & 000.050208 \\
-			32     & 1       & 000.054240 \\
-			1024   & 32      & 000.057536 \\
-			1      & 1024    & 000.066880 \\
-			1      & 128     & 000.076160 \\
-			1      & 1       & 000.149152 \\
-			1024   & 1024    & 000.163264 \\
+			16x16     & 16x16   & 005.450240  \\
+			32x32     & 16x16   & 005.528064  \\
+			8x8       & 8x8     & 005.688256  \\
+			16x16     & 32x32   & 005.862272  \\
+			64x64     & 16x16   & 005.932992  \\
+			32x32     & 32x32   & 006.667456  \\
+			4x4       & 4x4     & 021.764448  \\
+			1024x1024 & 16x16   & 031.003839  \\
+			1024x1024 & 32x32   & 204.964478  \\
+			1x1       & 1x1     & 3699.413574 \\
 			\hline
 		\end{tabular}
-	\end{subtable}
-	\begin{subtable}{.333\linewidth}
-		\caption{$10^5$ элементов}
-		\centering
+	\end{table*}
+\end{center}
 
-		\lstinline|cpu time = 0.200000|
-
-		\begin{tabular}{|c|c|c|}
-			\hline
-			blocks & threads & time       \\
-			\hline
-
-			128    & 128     & 000.037600 \\
-			32     & 1024    & 000.040832 \\
-			32     & 128     & 000.042400 \\
-			1024   & 128     & 000.046528 \\
-			128    & 1024    & 000.055168 \\
-			1      & 1024    & 000.067008 \\
-			128    & 32      & 000.091232 \\
-			1024   & 32      & 000.093760 \\
-			32     & 32      & 000.117824 \\
-			1024   & 1024    & 000.170272 \\
-			1      & 128     & 000.444320 \\
-			1      & 32      & 001.752160 \\
-			1024   & 1       & 001.756608 \\
-			128    & 1       & 001.949856 \\
-			32     & 1       & 003.432608 \\
-			1      & 1       & 011.677664 \\
-			\hline
-		\end{tabular}
-	\end{subtable}
-	\begin{subtable}{.333\linewidth}
-		\caption{$10^6$ элементов}
-		\centering
-
-		\lstinline|cpu time = 1.997000|
-
-		\begin{tabular}{|c|c|c|}
-			\hline
-			blocks & threads & time       \\
-			\hline
-
-			1024   & 128     & 000.273600 \\
-			32     & 1024    & 000.277280 \\
-			128    & 1024    & 000.290944 \\
-			128    & 128     & 000.293120 \\
-			32     & 128     & 000.345056 \\
-			1024   & 1024    & 000.441344 \\
-			1      & 1024    & 000.578688 \\
-			1024   & 32      & 000.763008 \\
-			128    & 32      & 000.833280 \\
-			32     & 32      & 001.102944 \\
-			1      & 128     & 004.359520 \\
-			1      & 32      & 017.438175 \\
-			1024   & 1       & 017.528929 \\
-			128    & 1       & 025.771551 \\
-			32     & 1       & 034.263199 \\
-			1      & 1       & 116.714722 \\
-			\hline
-		\end{tabular}
-	\end{subtable}
-
-\end{table*}
 
 \se{Выводы}
 
-Всю жизнь я делал реверс вектора в один поток и мне даже не приходила в голову идея
-этот алгоритм распараллелить. Как оказалось, это имееет смысл для GPU.
+Я понял что обрабатывать изображения на CPU плохая идея, если даже на одном небольшом изображении
+разница получилась в 64 раза.
 
-Иногда нужно производить быстрый реверс вектора, например для подготовки данных для
-обучения нейросети.
-
-Судя по результатам тестов не всегда имееет смысл отдавать все доступные ресурсы на
-выполнение операции. В тесте с небольшим количеством элементов ($10^3$)
-вариант с \lstinline|<<<1024,1024>>>| показал худший результат из всех. Больше времени ушло на создание потоков,
-чем на выполнение кода.
-
-В итоге, GPU оказалась быстрее чем CPU примерно в 7 раз (на самом большом тесте).
-Из этого можно сделать вывод, что использование GPU не целесообразно для мизерного набора данных.
+Конкретно выделение контуров было мне нужно для подготовки данных для обучения нейросети.
+Нужно было разделить изображение на несколько по указанным линиям.
+Правда там я использовал повышение контраста и резкости,
+но чувствую было бы проще если бы я использовал предназначенный для этого алгоритм.
 
 \end{document}
