Init lab3 report

--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -60,7 +60,7 @@
 	stringstyle=\color{orange},
 }
 
-\lstset{escapechar=@,style=customc}
+\lstset{escapechar=|,style=customc}
 
 \pgfplotsset{compat=1.17}
 
