--- a/lab3/report/lab3.tex
+++ b/lab3/report/lab3.tex
@@ -70,8 +70,6 @@ $nc <= 32$.
 \listsource{../src}{main.cu}
 }
 
-\newpage
-
 \se{Результаты}
 
 \begin{figure}[!tbh]
@@ -84,7 +82,7 @@ $nc <= 32$.
 	\begin{subfigure}{0.49\textwidth}
 		\centering
 		\caption*{Результат:}
-		\includegraphics[scale=0.4]{../test/t3/res.png}
+		\includegraphics[scale=0.4]{t3-res.png}
 	\end{subfigure}
 \end{figure}
 
