send report lab3

--- a/lab3/report/lab3.tex
+++ b/lab3/report/lab3.tex
@@ -95,12 +95,12 @@ $nc <= 32$.
 	\begin{subfigure}{0.49\textwidth}
 		\centering
 		\caption*{Исходное изображение}
-		\includegraphics[scale=0.159]{../test/images/pumpkin.png}
+		\includegraphics[scale=0.79]{pp.png}
 	\end{subfigure}
 	\begin{subfigure}{0.49\textwidth}
 		\centering
 		\caption*{Результат:}
-		\includegraphics[scale=0.038]{../test/t4/res.png}
+		\includegraphics[scale=0.038]{pumpkin-result.png}
 	\end{subfigure}
 \end{figure}
 
