--- a/lab5/report/lab5.tex
+++ b/lab5/report/lab5.tex
@@ -56,15 +56,57 @@
 После этого будет $n-1$ отсортированных блоков, а так же половинка блока в начале массива и половинка в конце.
 Вторая итерация так же берёт половинки блоков, но начинается с начала массива, а не с серидины первого блока.
 
-Так, если предположить худший вариант - 
+Так, если предположить худший вариант - блок с самыми малыми значениями последний, а с самыми большими первый,
+то за $n$ итераций первый блок дойдёт до своего места, как и последний.
+Блок будет двигаться по массиву как гусеница, за каждую итерацию одна его половинка будет двигаться на своё место.
+Если какие-то элементы оказались разбросаны по массиву, то они встанут на своё место при проходе блока по массиву.
 
 {
-	\listsource{../src}{main.cu}
+\listsource{../src}{main.cu}
 }
 
 \newpage
 
 \se{Результаты}
+
+\begin{table}[!htb]
+\begin{minipage}{.49\linewidth}
+\centering
+\caption*{CPU}
+\begin{tabular}{|l|r|}
+	\hline
+	n       & time         \\
+	\hline
+
+	10      & 0.623824     \\
+	8123    & 9.101413     \\
+	10000   & 13.736742    \\
+	100000  & 774.255989   \\
+	100500  & 789.445012   \\
+	1000000 & 70896.706258 \\
+	\hline
+\end{tabular}
+\end {minipage} %
+\begin{minipage}{.49\linewidth}
+\centering
+\caption*{GPU}
+\begin{tabular}{|l|r|}
+	\hline
+	n       & time        \\
+	\hline
+
+	10      & 269.320362  \\
+	8123    & 247.722819  \\
+	10000   & 178.349589  \\
+	100000  & 193.055952  \\
+	100500  & 204.694692  \\
+	1000000 & 1527.011376 \\
+	\hline
+\end{tabular}
+\end {minipage}
+\end{table}
+
+\se{Профилирование}
 
 \se{Выводы}
 
