send reporl lab5

--- a/lab5/report/lab5.tex
+++ b/lab5/report/lab5.tex
@@ -108,7 +108,18 @@
 
 \se{Профилирование}
 
+\listtext{.}{log.nvprof}
+
+Легко видеть что чет-нечет сортировка получилась не очень.
+Хотя 92\% времени и ушло на битоническую сортировку,
+но на малых массивах хватает одного запуска чет-нечетной, которую можно было ускорить как минимум на треть.
+
 \se{Выводы}
 
+По результатам профилирования можно заметить насколько сильно предварительная сортировка ускорила процесс.
+Разница по времени выполнения между одной чёт-нечётной сортровкой и одной последующей битонической чуть больше чем
+150'000 раз. Даже с учётом того что чет-нечетная написана отвратно результат впечатляет.
+
+Тест с $n=16*10^6$ выполнялся на CPU около часа, но я не дождался. На GPU он отработал за 5 минут.
 
 \end{document}
