Done report lab4

--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -43,6 +43,7 @@
 	tabsize=4,
 	breaklines=true,
 	escapechar=@,
+	morecomment=[s]{/*}{*/},
 	numbers=none,
 	frame=none,
 	escapeinside={\%*}{*)},
@@ -63,7 +64,7 @@
 	stringstyle=\color{orange},
 }
 
-\lstset{escapechar=|,style=customc}
+\lstset{escapechar=@,style=customc}
 
 \pgfplotsset{compat=1.17}
 
