--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -28,7 +28,7 @@
 
 \newcommand{\listsource}[2]{
 	\subsection*{\textbf{#2}}
-	\lstinputlisting[language=c++]{#1/#2}
+	\lstinputlisting[language=c++,basicstyle=\scriptsize]{#1/#2}
 }
 \newcommand{\listtext}[2]{
 	\subsection*{\textbf{#2}}
@@ -85,6 +85,7 @@
 % 	keepspaces = true,
 % 	tabsize=2
 % }
+\newcommand{\cource}{Программирование графических процессоров}
 
 \newcommand{\makemytitlepage}[2]{
 	\thispagestyle{empty}
@@ -105,7 +106,7 @@
 		\vspace{36pt}
 
 		{Лабораторная работа №#1  \\
-			По курсу ``Программирование графических процессоров''
+			По курсу ``\cource''
 		}
 		\vspace{48pt}
 
